Improvements by T.Schartel
git-svn-id: https://svn.code.sf.net/p/vmb/src/trunk@668 a22778cc-470f-459f-8348-c59b68ef04d0

--- a/src/mmixide/help/debugger/index.html
+++ b/src/mmixide/help/debugger/index.html
@@ -2,25 +2,7 @@
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
-<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="Debugger">
-	<param name="Keyword" value="MMIX Simulator">
-	<param name="Keyword" value="F5">
-	<param name="Keyword" value="Debug Button">
-	<param name="Keyword" value="Continue Button">
-	<param name="Keyword" value="Assembler">
-	<param name="Keyword" value="Step Instruction">
-	<param name="Keyword" value="PUSHJ">
-	<param name="Keyword" value="PUSHGO">
-	<param name="Keyword" value="Step Over">
-	<param name="Keyword" value="Step Out">
-	<param name="Keyword" value="Interrupt Execution">
-	<param name="Keyword" value="Halt Execution">
-	<param name="Keyword" value="Execute Breakpoint">
-	<param name="Keyword" value="Read Breakpoint">
-	<param name="Keyword" value="Write Breakpoint">
-	<param name="Keyword" value="Tracepoint">
-</OBJECT>
+
 <h2>The MMIX Debugger</h2>
 If an MMIX source file is in the editor, you can start
 the MMIX simulator in debugging mode 
@@ -75,7 +57,7 @@ instruction is executed (unless a breakpoint or the end of the program intervene
 			Terminate the debugging session.<p>
 		</ul>
 	
-<h4>Setting Breakpoints and Tracepoints</h4>There are three buttons to toggle (set or unset) breakpoints and one button to toggle a tracepoint. To set a breakpoint move the cursor in the edit window to the line containing the instruction and press the appropriate button.<ul>
+<h4><a id="settingbreak">Setting Breakpoints and Tracepoints<a></h4>There are three buttons to toggle (set or unset) breakpoints and one button to toggle a tracepoint. To set a breakpoint move the cursor in the edit window to the line containing the instruction and press the appropriate button.<ul>
 		<li><img src="brkexec.gif" border=0> toggle an execute breakpoint. The program will stop after or before executing the first instruction on this line.<br>
 			<p>
 			Execute breakpoint exampe:<font color="gray"><img src="execline.gif" align="absmiddle" border=2 hspace="20"></font>
