--- a/src/mmixide/help/instructions/branch.html
+++ b/src/mmixide/help/instructions/branch.html
@@ -1,5 +1,6 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
@@ -69,4 +70,7 @@ the branch is forward or backward and chooses the appropriate instruction.
 Probable branches, with the prefix "P" are a hint for the processor
 that the branch is probably taken, directing the instruction fetch
 to the target address.
+<p>
+<B>See also:</B>
+    <p><a href="gijmp.html">General Information</a>
 </body>
