--- a/src/mmixide/help/instructions/compare.html
+++ b/src/mmixide/help/instructions/compare.html
@@ -24,7 +24,7 @@
 <table>
 <tr> <td rowspan=3 valign="middle"> s($X)  &larr; 
      <td rowspan=3 valign="middle"> 
-       <img src="brace.png" alt="{">
+       <img src="../image/brace.png" alt="{">
     <td>  - 1 <td> if s($Y) &lt; s($Z)
 <tr><td>  0 <td> if s($Y) = s($Z)
 <tr><td>  + 1 <td> if s($Y) &gt; s($Z)
@@ -34,7 +34,7 @@
 <table>
 <tr> <td rowspan=3 valign="middle"> s($X)  &larr; 
      <td rowspan=3 valign="middle"> 
-       <img src="brace.png" alt="{">
+       <img src="../image/brace.png" alt="{">
     <td>  - 1 <td> if u($Y) &lt; u($Z)
 <tr><td>  0 <td> if u($Y) = u($Z)
 <tr><td>  + 1 <td> if u($Y) &gt; u($Z)
