--- a/src/mmixide/help/instructions/control.html
+++ b/src/mmixide/help/instructions/control.html
@@ -10,6 +10,7 @@
 </OBJECT>
 
 <ul>
+<li><a href="gijmp.html">General Information</a></li>
 <li><a href="jmp.html">Jumps with Relative Addresses</a></li>
 <li><a href="go.html">Jumps with Absolute Addresses</a></li>
 <li><a href="branch.html">Branches</a></li>
