--- a/src/mmixide/help/instructions/cset.html
+++ b/src/mmixide/help/instructions/cset.html
@@ -56,7 +56,7 @@
 <td><table>
      <td rowspan=2 valign="middle"> s($X) &larr; 
      <td rowspan=2 valign="middle"> 
-       <img src="brace.png" alt="{">
+       <img src="../image/brace.png" alt="{">
     <td>  s($Z) if s($Y) satisfies condition xx,
 <tr><td>   0    otherwise
 </table>
@@ -72,6 +72,6 @@ for the value $Y and conditional execute the assignment.
   <p>
 <B>See also:</B>
 <p>
-<a href="branch.html">Branches</a>.
+<a href="branch.html">Branches</a>, <a href="gijmp.html">General Information</a>
 
 </body>
