--- a/src/mmixide/help/instructions/index.html
+++ b/src/mmixide/help/instructions/index.html
@@ -12,7 +12,7 @@
 <ul>
 <li><a href="integer.html">Integer Arithmetic</a></li>
 
-<li><a href="farith.html">Floating Point Arithmetic</a></li>
+<li><a href="float.html">Floating Point Arithmetic</a></li>
 
 <li><a  href="bits.html">Bits and Bytes</a></li>
 
