--- a/src/mmixide/help/instructions/lda.html
+++ b/src/mmixide/help/instructions/lda.html
@@ -32,7 +32,7 @@
 <B>Description:</B>
 <p>
 Stores the address indicated by the label in register $X.
-This instruction is assembled as an ADDUI instruction
+This instruction is assembled as an ADDU instruction
 using a suitable global register or, with the -x option of mmixal
 it is assembled into a sequence of four instructions using 16-bit immediate
 operands.
