--- a/src/mmixide/help/instructions/ldb.html
+++ b/src/mmixide/help/instructions/ldb.html
@@ -42,8 +42,17 @@ to the left using the sign bit.
 <p>
 The address A is rounded down, if necessary, according to the alignment requirements.
 Addresses for octabytes must be a multiple of 8, for tetrabytes a multiple of 4,
-and for wydes a multiple of 2.
-  <p>
+and for wydes a multiple of 2.</br></br>
+
+You may study the following visual examples to get a better understanding of how to Load Data.
+
+  </p>
+  <table  border=1 cellspacing="4" cellpadding="4">
+      <th>Register indirect adressing</th><th>Indexed addressing</th><th>Indexed addressing</th>
+      <tr><td><img class='img-reg-ind' src="../image/register-indirect.png" alt="{">
+</td><td><img class='img-ind-adr' src="../image/indexed-addressing.png" alt="{"></td><td><img class='img-ind-adr2' src="../image/indexed-addressing2.png"> </td></tr>
+</table>
+<p>
 <B>See also:</B>
 <p>
 <a href="ldbu.html">Loading Unsigned Data</a>. 
