--- a/src/mmixide/help/instructions/pop.html
+++ b/src/mmixide/help/instructions/pop.html
@@ -47,10 +47,11 @@ is directly below $0 on the register stack. This value is replaced by the main
 return value. After that, the registers are renumbered such that the callee's
 local registers are again $0, $1, ... and the return values are in
 registers $X and following (where the $X here is from the previous PUSHJ
-instruction).
+instruction).<br><br>
+(<b>Consider:</b> You can see examples of the PUSHJ and POP instruction <a href="pushjandpopexample.html">here</a>)
   <p>
 <B>See also:</B>
 <p>
-<a href="pushj.html">PUSHJ</a> 
+<a href="pushj.html">PUSHJ</a> and <a href="pushjandpopexample.html">PUSHJ and POP examples</a>
 
 </body>
