--- a/src/mmixide/help/instructions/resume.html
+++ b/src/mmixide/help/instructions/resume.html
@@ -22,7 +22,8 @@
   <p>
 <B>Description:</B>
 <p>
-Undoes the effect of a previous TRIP or TRAP instruction.
+Undoes the effect of a previous TRIP or TRAP instruction.<br><br>
+<b>Consider:</b> For detailed information about this instruction read, <a href="gitraptrip.html">General Information (TRAP and TRIP)</a>
   <p>
 <B>See also:</B>
 <p>
