--- a/src/mmixide/help/instructions/subroutine.html
+++ b/src/mmixide/help/instructions/subroutine.html
@@ -12,6 +12,7 @@
 <ul>
 <li><a href="pushj.html">PUSHJ and PUSHGO</a></li>
 <li><a href="pop.html">POP</a></li>
+<li><a href="pushjandpopexample.html">PUSHJ and POP Examples</a></li>
 <li><a href="save.html">SAVE and UNSAVE</a></li>
 <li><a href="cswap.html">CSWAP</a></li>
 </ul>
