--- a/src/mmixide/help/instructions/trap.html
+++ b/src/mmixide/help/instructions/trap.html
@@ -32,7 +32,8 @@
 <B>Description:</B>
 <p>
 Causes a Trap Interrupt and executes a Trap Handler inside the operating system
-at address rT.
+at address rT.<br><br>
+<b>Consider:</b> For detailed information about this instruction read, <a href="gitraptrip.html">General Information (TRAP and TRIP)</a>
   <p>
 <B>See also:</B>
 <p>
