--- a/src/mmixide/help/instructions/trip.html
+++ b/src/mmixide/help/instructions/trip.html
@@ -31,7 +31,8 @@
   <p>
 <B>Description:</B>
 <p>
-Causes a Trip interrupt and jumps to the Trip handler at address #00.
+    Causes a Trip interrupt and jumps to the Trip handler at address #00.<br><br>
+    <b>Consider:</b> For detailed information about this instruction read, <a href="gitraptrip.html">General Information (TRAP and TRIP)</a>
   <p>
 <B>See also:</B>
 <p>
