--- a/src/mmixide/help/options/index.html
+++ b/src/mmixide/help/options/index.html
@@ -1,39 +1,44 @@
 <head>
-<link rel="stylesheet" type="text/css" href="../mmixide.css">
+	<link rel="stylesheet" type="text/css" href="../mmixide.css">
+	
+
 </head>
+
 <body>
+	<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+		<param name="Keyword" value="Options">
+		<param name="Keyword" value="Editor Options">
+		<param name="Keyword" value="Assembler Options">
+		<param name="Keyword" value="Debugger Options">
+		<param name="Keyword" value="Run Options">
+		<param name="Keyword" value="Symbol Table Options">
+		<param name="Keyword" value="Sources Options">
+		<param name="Keyword" value="Encoding Options">
+		<param name="Keyword" value="UTF Encoding">
+		<param name="Keyword" value="ASCII Encoding">
+	</Object>
 	<h2>Options</h2>
-	<Object>
-	<param name="Keyword" value="Options">
-	<param name="Keyword" value="Editor Options">
-	<param name="Keyword" value="Assembler Options">
-	<param name="Keyword" value="Debugger Options">
-	<param name="Keyword" value="Run Options">
-	<param name="Keyword" value="Symbol Table Options">
-	<param name="Keyword" value="Sources Options">
-	<param name="Keyword" value="Encoding Options">
-	<param name="Keyword" value="UTF Encoding">
-	<param name="Keyword" value="ASCII Encoding">
-</OBJECT>
+
 
 	<p>The Options Menu contains these entries:</p>
 	<ul>
-		<li><a href="editor.html">Editor ...</a>
-		<li><a href="assembler.html">Assembler ...</a>
-		<li><a href="debugger.html">Debug ...</a>
-		<li><a href="run.html">Run ...</a>
-		<li><a href="symbols.html">Symbol table ...</a>
-		<li><a href="sources.html">Sources ...</a>
+		<li><a href="keys.html">Keybindings</a>
+		<li><a href="editor.html">Editor</a>
+		<li><a href="assembler.html">Assembler</a>
+		<li><a href="debugger.html">Debug</a>
+		<li><a href="run.html">Run</a>
+		<li><a href="symbols.html">Symbol table</a>
+		<li><a href="sources.html">Sources</a>
 		<li>Encoding<br>
-			There are two choices for Encoding: 
+			There are two choices for Encoding:
 			<ul>
-				
+
 			</ul>
 			<ul>
-				<li>UTF-8 and 
-				<li>ASCII. 
+				<li>UTF-8 and
+				<li>ASCII.
 			</ul>
-		
+
 	</ul>
 	<p></p>
 </body>
