--- a/src/mmixide/help/splitter/index.html
+++ b/src/mmixide/help/splitter/index.html
@@ -30,7 +30,7 @@ and in the center
 of the main region is the turn button (<img src="turn.png">)
 
 
-<h3>Draging a splitter bar</h3>
+<h3><a id="dragging">Draging a splitter bar</a></h3>
 This is the simplest and most common operation. You
 can drag a horizontal splitter bar up or down and
 a vertical splitter bar right or left.
@@ -45,7 +45,7 @@ splitter bar.
 <li> release the mouse button.
 </ul>
 
-<h3>Turning the splitter bar</h3>
+<h3><a id="turning">Turning the splitter bar</a></h3>
 You can turn the splitter bar counter clock wise by 90 degree.
 Doing this four times will bring the splitter bar back to its initial
 position.
@@ -57,7 +57,7 @@ To do so:
 <li> Double click the left mouse button.
 </ul>
 
-<h3>Moving a window pane</h3>
+<h3><a id="moving">Moving a window pane</a></h3>
 You can move a window pane to any position inside the window
 using one of the move buttons in the end regions. The move button 
 is a small triangle pointing to one of the adjacent window panes;
@@ -101,7 +101,7 @@ but is quite intuitive to use. Just try it!)
 </ul>
 
 
-<h3>Closing one of the adjacent window panes</h3>
+<h3><a id="closing">Closing one of the adjacent window panes</a></h3>
 You can close either of the adjacent window panes by using
 one of the close buttons. The move button next to the close button
 points to the affected window pane.
