--- a/src/mmixide/help/instructions/ldunc.html
+++ b/src/mmixide/help/instructions/ldunc.html
@@ -1,39 +1,46 @@
 <head>
-<link rel="stylesheet" type="text/css" href="../mmixide.css">
+    <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
 
-<h4>LDUNC and STUNC</h4>
-<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="LDUNC">
-	<param name="Keyword" value="STUNC">
-</OBJECT>
+    <h4>LDUNC and STUNC</h4>
+    <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+        <param name="Keyword" value="LDUNC">
+        <param name="Keyword" value="STUNC">
+    </OBJECT>
 
 
 
-  <B>Name:</B>
-<p>
-<a name="LDUNC" id="LDUNC">LDUNC</a> $X,$Y,$Z
- <br><a name="STUNC" id="STUNC">STUNC</a> $X,$Y,$Z
- <p>
-<B>Specification:</B>
-<table cellspacing=5 >
+    <B>Name:</B>
+    <p>
+        <a name="LDUNC" id="LDUNC">LDUNC</a> $X,$Y,$Z
+        <br><a name="STUNC" id="STUNC">STUNC</a> $X,$Y,$Z
+    <p>
+        <B>Specification:</B>
+    <table cellspacing=5 >
 
-<tr><td>s($X)  </td><td> &larr; s(M<sub>8</sub>[$Y + $Z]) or
-  <tr><td>s(M<sub>8</sub>[$Y + $Z])  </td><td> &larr; $X
+        <tr><td>s($X)  </td><td> &larr; s(M<sub>8</sub>[$Y + $Z]) or
+        <tr><td>s(M<sub>8</sub>[$Y + $Z])  </td><td> &larr; $X
     </table><p>
-<B>Timing:</B>
-<p>
-1&upsilon; + 1&mu;
-  <p>
-<B>Description:</B>
-<p>
-Load or store an octabyte, similar to LDO and STO, without using
-the cache.
-  <p>
-<B>See also:</B>
-<p>
-<a href="ldb.html">LDO</a> and <a href="stb.html">STO</a>.
+        <B>Timing:</B>
+    <p>
+        1&upsilon; + 1&mu;
+    <p>
+        <B>Description:</B>
+    <p>
+        Load or store an octabyte, similar to LDO and STO, without using
+        the cache.
+    <p>
+    <p><table  border=1 cellspacing="4" cellpadding="4">
+        <tr><td>LDUNC | STUNC:</td><td><i>"preload data"</i><br><br>
+                These instructions, which have the same meaning as LDO | STO, also inform the computer that the loaded | stored octabyte
+                (and its neighbors in a cache block) will probably not be read or written in the near future. This is why the cache is not used.
+            </td></tr>
+    </table>
+    <p>
+        <B>See also:</B>
+    <p>
+        <a href="ldb.html">LDO</a> and <a href="stb.html">STO</a>.
 
 
 </body>
