--- a/src/mmixide/help/instructions/neg.html
+++ b/src/mmixide/help/instructions/neg.html
@@ -1,33 +1,47 @@
 <head>
-<link rel="stylesheet" type="text/css" href="../mmixide.css">
+    <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
 
-<h4>NEG and NEGU</h4>
-<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="NEG">
-	<param name="Keyword" value="NEGU">
-</OBJECT>
+    <h4>NEG and NEGU</h4>
+    <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+        <param name="Keyword" value="NEG">
+        <param name="Keyword" value="NEGU">
+    </OBJECT>
 
 
-  <B>Name:</B>
-<table cellspacing=5 >
-<tr>
-<td><a name="NEG" id="NEG">NEG</a> $X,Y,$Z </td><td>NEG $X,Y,Z </td></tr>
-<tr><td><a name="NEGU" id="NEGU">NEGU</a> $X,Y,$Z</td><td>NEGU $X,Y,Z</td></tr>
-<tr><td>            </td></tr>
-</table> 
- <p>
-<B>Specification:</B>
-<table cellspacing=5 >
-  <tr><td>NEG: s($X)  </td><td> &larr; Y - s($Z)
-  <tr><td>NEGU: u($X)  </td><td> &larr; (Y - u($Z))mod2<sup>64</sup>
-</table><p>
-<B>Timing:</B>
-<br>1&upsilon;
-  <p>
-<B>Description:</B>
-<p>
-Y is a nonnegative constant, usually zero. If Y has the value zero, it can be omitted.
-The instruction is used to negate $Z. 
+    <B>Name:</B>
+    <table cellspacing=5 >
+        <tr>
+            <td><a name="NEG" id="NEG">NEG</a> $X,Y,$Z </td><td>NEG $X,Y,Z </td></tr>
+        <tr><td><a name="NEGU" id="NEGU">NEGU</a> $X,Y,$Z</td><td>NEGU $X,Y,Z</td></tr>
+        <tr><td>            </td></tr>
+    </table> 
+    <p>
+        <B>Specification:</B>
+    <table cellspacing=5 >
+        <tr><td>NEG: s($X)  </td><td> &larr; Y - s($Z)
+        <tr><td>NEGU: u($X)  </td><td> &larr; (Y - u($Z)) mod 2<sup>64</sup>
+    </table><p>
+        <B>Timing:</B>
+        <br>1&upsilon;
+    <p>
+        <B>Description:</B>
+    <p>
+        Y is a nonnegative constant, usually zero. If Y has the value zero, it can be omitted.
+        The instruction is used to negate $Z. </p>
+    <table  border=1 cellspacing="4" cellpadding="4">
+        <tr><td>NEG:</td><td>The value Y - $Z or Y - Z is placed into register $X using signed, two's complement arithmetic. An integer
+                overflow exception occurs if the result is greater than 2<sup>63</sup>
+                - 1. (Notice that in this case MMIX works with the
+                "immediate" constant Y, not register $Y. NEG commands are analogous to the immediate variants of other
+                commands, because they save us from having to put one-byte constants into a register. When Y = 0, overflow
+                occurs if and only if $Z = -2<sup>63</sup>
+                . The instruction NEG $X,1,2 has exactly the same effect as NEG $X,0,1)
+            </td></tr>
+        <tr><td>NEGU:</td><td>The value (Y - $Z) mod 2<sup>64</sup>
+                or (Y - Z) mod 2<sup>64</sup>
+                is placed into register $X. NEGU instructions are the same as
+                NEG instructions, except that no test for overflow is made.</td></tr>
+    </table>
 </body>
