--- a/src/mmixide/help/instructions/put.html
+++ b/src/mmixide/help/instructions/put.html
@@ -1,46 +1,86 @@
 <head>
-<link rel="stylesheet" type="text/css" href="../mmixide.css">
+    <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
 
 
-<h4>PUT and GET</h4>
-<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="PUT">
-	<param name="Keyword" value="GET">
-</OBJECT>
+    <h4>PUT and GET</h4>
+    <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+        <param name="Keyword" value="PUT">
+        <param name="Keyword" value="GET">
+    </OBJECT>
 
 
-  <B>Name:</B>
-<table cellspacing=5>
- <tr><td><a name="PUT" id="PUT">PUT</a> X,$Z
- <tr><td>PUT X,Z
- <tr><td><a name="GET" id="GET">GET</a> $X,Z
-</table><p>
-<B>Specification:</B>
-<table cellspacing=5>
-<tr><td>PUT: u(g[X])  </td><td> &larr; u($Z)
-<tr><td>GET: u($X)  </td><td> &larr; u(g[Z])
+    <B>Name:</B>
+    <table cellspacing=5>
+        <tr><td><a name="PUT" id="PUT">PUT</a> X,$Z
+        <tr><td>PUT X,Z
+        <tr><td><a name="GET" id="GET">GET</a> $X,Z
     </table><p>
-<B>Timing:</B>
-<p>
-1&upsilon;
-  <p>
-<B>Description:</B>
-<p>
-GET transfers the value of a special register into a regular register.
-PUT goes the other way round, transferring the value from a regular register
-or a constant to a special register.
-  <p>
-To indicate one of the special registers, use the predefined constants
-  rA&#x2026;rZ as well as rBB, rTT, rWW,rXX,rYY and rZZ.
-  <p>
-The following registers are read only in user mode:
-rC, rL, rN, rO, rS, rI,  rT, rTT, rK, rQ, rU and rV.
-  <p>
-It is not possible to store a value in rG that is less than 32, or
-less than the current value of rL, or greater than 255.
-  <p>
-It is not possible to store a value in rA that is greater than
-#3FFFF.
+        <B>Specification:</B>
+    <table cellspacing=5>
+        <tr><td>PUT: u(g[X])  </td><td> &larr; u($Z)
+        <tr><td>GET: u($X)  </td><td> &larr; u(g[Z])
+    </table><p>
+        <B>Timing:</B>
+    <p>
+        1&upsilon;
+    <p>
+        <B>Description:</B>
+    <p>
+        GET transfers the value of a special register into a regular register.
+        PUT goes the other way round, transferring the value from a regular register
+        or a constant to a special register.
+    <p>
+        To indicate one of the special registers, use the predefined constants
+        rA&#x2026;rZ as well as rBB, rTT, rWW,rXX,rYY and rZZ.
+    <p>
+        The following registers are read only in user mode:
+        rC, rL, rN, rO, rS, rI,  rT, rTT, rK, rQ, rU and rV.
+    <p>
+        It is not possible to store a value in rG that is less than 32, or
+        less than the current value of rL, or greater than 255.
+    <p>
+        It is not possible to store a value in rA that is greater than
+        #3FFFF.
+    <p>
+    <table  border=1 cellspacing="4" cellpadding="4">
+        <tr><td>PUT:</td><td><i>"put into special register" (the Y field must be zero.)</i><br><br>
+                The special register identified by X is set to the contents of register $Z or to the unsigned byte Z itself, if
+                permissible. Some changes are, however, impermissible: <br><br><table border=1 cellspacing="4" cellpadding="4">
+                    <tr><td>rA</td><td>Bits of rA that are always zero must remain zero;</td></tr>
+                    <tr><td>rG | rL</td><td>the leading seven bytes of rG and rL must remain zero, and rL must not exceed rG;</td></tr>
+                    <tr><td>rN | rO | rS</td><td>the
+                            special registers 9-11
+                            (namely rN, rO, and rS) must not change;</td></tr>
+                    <tr><td>rC | rI | rK | rQ | rT | rU |
+                rV | rTT</td><td>special registers 8 and 12-18 (namely rC, rI, rK, rQ, rT, rU,
+                rV, and rTT) can be changed only if the privilege bit of rK is zero;</td></tr>
+                    <tr><td>rQ</td><td>certain bits of rQ (depending on
+                available hardware) might not allow software to change them from 0 to 1. Moreover, any bits of rQ that
+                have changed from 0 to 1 since the most recent GET x,rQ will remain 1 after PUT rQ,z. </td></tr>
+                    <tr><td>rL</td><td>The PUT command
+                will not increase rL; it sets rL to the minimum of the current value and the new value. (A program should
+                say SETL $99,0 instead of PUT rL,100 when rL is known to be less than 100.)</td></tr>
+                </table> <br><br>
+                   
+                Impermissible PUT commands cause an illegal instruction interrupt, or (in the case of rC, rI, rK, rQ, rT,
+                rU, rV, and rTT) a privileged operation interrupt.
+            </td></tr>
+        <tr><td>GET:</td><td><i>"get from special register" (the Y field must be zero.)</i><br><br>
+
+                Register $X is set to the contents of the special register identified by its code number Z, using the code
+                numbers listed earlier. An illegal instruction interrupt occurs if Z &ge; 32.
+                Every special register is readable; MMIX does not keep secrets from an inquisitive user. But of course
+                only the operating system is allowed to change registers like rK and rQ (the interrupt mask and request
+                registers). And not even the operating system is allowed to change rN (the serial number) or the stack
+                pointers rO and rS.
+            </td></tr>
+
+
+    </table>
+     <p>
+        <B>See also:</B>
+    <p>
+        <a href="specialregister.html">List of Special Registers</a> and <a href="stb.html">STO</a>.
 </body>
