--- a/src/mmixide/help/instructions/sadd.html
+++ b/src/mmixide/help/instructions/sadd.html
@@ -1,34 +1,44 @@
 <head>
-<link rel="stylesheet" type="text/css" href="../mmixide.css">
+    <link rel="stylesheet" type="text/css" href="../mmixide.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
 
-<h4>The  SADD Instruction</h4>
-<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="SADD">
-</OBJECT>
+    <h4>The  SADD Instruction</h4>
+    <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+        <param name="Keyword" value="SADD">
+    </OBJECT>
 
 
-  <B>Name:</B>
-<p>
-<a name="SADD" id="SADD">SADD</a> $X,$Y,$Z
- <p>
-<B>Specification:</B>
-<table cellspacing=5 >
+    <B>Name:</B>
+    <p>
+        <a name="SADD" id="SADD">SADD</a> $X,$Y,$Z
+    <p>
+        <B>Specification:</B>
+    <table cellspacing=5 >
 
-<tr><td>s($X)  </td><td> &larr; s(&#x2211;
-  (v($Y)&amp;&#x02DC; v($Z)))
+        <tr><td>s($X)  </td><td> &larr; s(&#x2211;
+                (v($Y)&amp;&#x02DC; v($Z)))
     </table><p>
-<B>Timing:</B>
-<p>
-SADD: &upsilon;
-  <p>
-<B>Description:</B>
-<p>
-This instruction (Sideways Add) 
-counts the number of bit positions in which $y has a 1 and $Z has a 0.
-The result is stored in $X.
+        <B>Timing:</B>
+    <p>
+        SADD: &upsilon;
+    <p>
+        <B>Description:</B>
+    <p>
+        This instruction (Sideways Add) 
+        counts the number of bit positions in which $y has a 1 and $Z has a 0.
+        The result is stored in $X.
+    <p>
+    <table border=1 cellspacing="4" cellpadding="4">
+
+        <tr><td>SADD:</td> <td>Each bit of register $Y is logically anded with the complement of the corresponding bit of register $Z or of
+                the constant Z, and the number of 1 bits in the result is placed in register $X. In other words, register $X is
+                set to the number of bit positions in which register $Y has a 1 and the other operand has a 0; in symbols,
+                $X = &upsilon;($Y \ $Z) or $X = &upsilon;($Y \ Z). When the second operand is zero this operation is sometimes called
+                “population counting,” because it counts the number of 1s in register Y.</td></tr>
+    </table>
 
 
 </body>
