--- a/src/mmixide/help/instructions/shift.html
+++ b/src/mmixide/help/instructions/shift.html
@@ -1,50 +1,77 @@
 <head>
-<link rel="stylesheet" type="text/css" href="../mmixide.css">
+    <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
 
 
-<h4>Shifting Bit Patterns</h4>
-<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="Shifting">	
-	<param name="Keyword" value="SL">	
-	<param name="Keyword" value="SLU">
-	<param name="Keyword" value="SR">
-	<param name="Keyword" value="SRU">
-</OBJECT>
+    <h4>Shifting Bit Patterns</h4>
+    <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+        <param name="Keyword" value="Shifting">	
+        <param name="Keyword" value="SL">	
+        <param name="Keyword" value="SLU">
+        <param name="Keyword" value="SR">
+        <param name="Keyword" value="SRU">
+    </OBJECT>
 
 
-  <B>Name:</B>
-<table cellspacing=5 
-><tr><td><a name="SL" id="SL">SL</a> $X,$Y,$Z </td><td>SL $X,$Y,Z </td></tr>
-<tr><td><a name="SLU" id="SLU">SLU</a> $X,$Y,$Z</td><td>SLU $X,$Y,Z</td></tr>
-<tr><td><a name="SR" id="SR">SR</a> $X,$Y,$Z </td><td>SR $X,$Y,Z </td></tr>
-<tr><td><a name="SRU" id="SRU">SRU</a> $X,$Y,$Z</td><td>SRU $X,$Y,Z</td></tr>
-<tr><td>            </td></tr>
-</table> 
- <p>
-<B>Specification:</B>
-<table cellspacing=5 >
+    <B>Name:</B>
+    <table cellspacing=5 
+           ><tr><td><a name="SL" id="SL">SL</a> $X,$Y,$Z </td><td>SL $X,$Y,Z </td></tr>
+        <tr><td><a name="SLU" id="SLU">SLU</a> $X,$Y,$Z</td><td>SLU $X,$Y,Z</td></tr>
+        <tr><td><a name="SR" id="SR">SR</a> $X,$Y,$Z </td><td>SR $X,$Y,Z </td></tr>
+        <tr><td><a name="SRU" id="SRU">SRU</a> $X,$Y,$Z</td><td>SRU $X,$Y,Z</td></tr>
+        <tr><td>            </td></tr>
+    </table> 
+    <p>
+        <B>Specification:</B>
+    <table cellspacing=5 >
 
-<tr><td>SL: s($X)  </td><td> &larr; s($Y) &#x00D7; 2<sup>u($Z)</sup>
-  <tr><td>SLU: u($X)  </td><td> &larr; (u($Y) &#x00D7; 2<sup>u($Z)</sup>) mod 2<sup>64</sup>
-  <tr><td>SR: s($X)  </td><td> &larr; &lfloor;s($Y) / 2<sup>u($Z)</sup>&rfloor;
- <tr><td>SRU: u($X)  </td><td> &larr; &lfloor;u($Y) / 2<sup>u($Z)</sup>&rfloor;
-   </table><p>
-<B>Timing:</B>
-<p>
-1&upsilon;
-  <p>
-<B>Description:</B>
-<p>
-SL shifts the bits in register $Y left.
-If bits unequal to the sign bit of $Y are shifted out during
-this process, an overflow is signaled. The result is filled with 0 bits from the right.
+        <tr><td>SL: s($X)  </td><td> &larr; s($Y) &#x00D7; 2<sup>u($Z)</sup>
+        <tr><td>SLU: u($X)  </td><td> &larr; (u($Y) &#x00D7; 2<sup>u($Z)</sup>) mod 2<sup>64</sup>
+        <tr><td>SR: s($X)  </td><td> &larr; &lfloor;s($Y) / 2<sup>u($Z)</sup>&rfloor;
+        <tr><td>SRU: u($X)  </td><td> &larr; &lfloor;u($Y) / 2<sup>u($Z)</sup>&rfloor;
+    </table><p>
+        <B>Timing:</B>
+    <p>
+        1&upsilon;
+    <p>
+        <B>Description:</B>
+    <p>
+        SL shifts the bits in register $Y left.
+        If bits unequal to the sign bit of $Y are shifted out during
+        this process, an overflow is signaled. The result is filled with 0 bits from the right.
 
-  SLU has the same effect but never causes overflow.
-<p>
-SR shifts the bits in register $Y to the right.
-It fills the target register from the left by replicating the sign bit and discards
-bits on the right; SRU fills the target register from the left with zeros.
+        SLU has the same effect but never causes overflow.
+    <p>
+        SR shifts the bits in register $Y to the right.
+        It fills the target register from the left by replicating the sign bit and discards
+        bits on the right; SRU fills the target register from the left with zeros.
+    <p>
+    <table border=1 cellspacing="4" cellpadding="4">
+
+        <tr><td>SL:</td> <td>The bits of register $Y are shifted left by $Z or Z places, and 0s are shifted in from the right; the result is
+                placed in register $X. Register $Y is treated as a signed number, but the second operand is treated as an
+                unsigned number. The effect is the same as multiplication by 2<sup>$Z</sup> or by 2<sup>Z</sup>; an integer overflow exception
+                occurs if the result is - 2<sup>63</sup>
+                or < -2<sup>63</sup>. In particular, if the second operand is 64 or more, register $X will
+                become entirely zero, and integer overflow will be signaled unless register Y was zero.</td></tr>
+        <tr><td>SLU: </td><td> The bits of register $Y are shifted left by $Z or Z places, and 0s are shifted in from the right; the result is
+                placed in register $X. Both operands are treated as unsigned numbers. The SLU instructions are equivalent
+                to SL, except that no test for overflow is made.
+            </td></tr>
+        <tr><td>SR:</td><td> The bits of register Y are shifted right by $Z or Z places, and copies of the leftmost bit (the sign bit) are
+                shifted in from the left; the result is placed in register X. Register Y is treated as a signed number, but the
+                second operand is treated as an unsigned number. The effect is the same as division by 2<sup>$Z</sup> or by 2<sup>Z</sup>
+                and rounding down. In particular, if the second operand is 64 or more, register $X will become zero if $Y was
+                nonnegative, -1 if $Y was negative.
+            </td></tr>
+        <tr><td>SRU:</td> <td>The bits of register $Y are shifted right by $Z or Z places, and 0s are shifted in from the left; the result is
+                placed in register $X. Both operands are treated as unsigned numbers. The effect is the same as unsigned
+                division of a 64-bit number by 2<sup>$Z</sup> or by 2<sup>Z</sup>; 
+                if the second operand is 64 or more, register $X will become
+                entirely zero.
+
+            </td></tr>
+    </table><p>
 
 </body>
