--- a/src/mmixide/help/instructions/signed.html
+++ b/src/mmixide/help/instructions/signed.html
@@ -1,72 +1,95 @@
 <head>
-<link rel="stylesheet" type="text/css" href="../mmixide.css">
+    <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
 <body>
 
 
-<h4><a name="Signed_Arithmetic" id="Signed_Arithmetic">Signed Arithmetic</a></h4>
-<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="Signed Arithmetic">
-	<param name="Keyword" value="ADD">
-	<param name="Keyword" value="SUB">
-	<param name="Keyword" value="MUL">
-	<param name="Keyword" value="DIV">
-</OBJECT>
+    <h4><a name="Signed_Arithmetic" id="Signed_Arithmetic">Signed Arithmetic</a></h4>
+    <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+        <param name="Keyword" value="Signed Arithmetic">
+        <param name="Keyword" value="ADD">
+        <param name="Keyword" value="SUB">
+        <param name="Keyword" value="MUL">
+        <param name="Keyword" value="DIV">
+    </OBJECT>
 
 
-<B>Name:</B>
-<table cellspacing=5 >
-<tr><td><a name="ADD" id="ADD">ADD</a> $X,$Y,$Z</td><td>ADD $X,$Y,Z</td></tr>
-<tr><td><a name="SUB" id="SUB">SUB</a> $X,$Y,$Z</td><td>SUB $X,$Y,Z</td></tr>
-<tr><td><a name="MUL" id="MUL">MUL</a> $X,$Y,$Z</td><td>MUL $X,$Y,Z</td></tr>
-<tr><td><a name="DIV" id="DIV">DIV</a> $X,$Y,$Z</td><td>DIV $X,$Y,Z</td></tr>
-</table> 
+    <B>Name:</B>
+    <table cellspacing=5 >
+        <tr><td><a name="ADD" id="ADD">ADD</a> $X,$Y,$Z</td><td>ADD $X,$Y,Z</td></tr>
+        <tr><td><a name="SUB" id="SUB">SUB</a> $X,$Y,$Z</td><td>SUB $X,$Y,Z</td></tr>
+        <tr><td><a name="MUL" id="MUL">MUL</a> $X,$Y,$Z</td><td>MUL $X,$Y,Z</td></tr>
+        <tr><td><a name="DIV" id="DIV">DIV</a> $X,$Y,$Z</td><td>DIV $X,$Y,Z</td></tr>
+    </table> 
+    <p>
+        <B>Specification:</B>
+    <table cellspacing=5 >
+        <tr><td>ADD: s($X)</td><td> &larr; s($Y) + s($Z)</td></tr>
+        <tr><td>SUB: s($X)</td><td> &larr; s($Y) - s($Z)</td></tr>
+        <tr><td>MUL: s($X)</td><td> &larr; s($Y) * s($Z)</td></tr>
+        <tr><td vlaign="top">DIV:</td><td>
+                <table>
+                    <tr> <td rowspan=2 valign="middle"> s($X)  &larr; 
+                        <td rowspan=2 valign="middle"> 
+                            <img src="../image/brace.png" alt="{">
+                        <td> &lfloor;s($Y) / s($Z)&rfloor; <td> if  $Z &ne; 0 
+                    <tr><td> 0                             <td> if  $Z = 0 
+                </table>
+                <p>
+                    the integer part of the Quotient and
+                <p>
+                <table>
+                    <tr><td rowspan=2 valign="middle"> s(rR)  &larr; 
+                        <td rowspan=2 valign="middle"> 
+                            <img src="../image/brace.png" alt="{">
+                        <td> s($Y) mod s($Z)  <td> if  $Z &ne; 0
+                    <tr><td> s($Y)            <td> if  $Z = 0  
+                </table>
+                <p>
+                    the remainder in special register rR.
+            </td></tr></table>
+    <p>
+        All instructions exist in two variants. The second operand can either be a
+        register $Z or an immediate value Z.
+    <p>
+        <B>Timing:</B>
+    <p>
+    <table cellspacing=5 >
+        <tr><td>ADD:</td> <td> 1&upsilon;</td>
+        <tr><td>SUB: </td><td> 1&upsilon;</td>
+        <tr><td>MUL:</td><td> 10&upsilon;</td>
+        <tr><td>DIV:</td> <td> 60&upsilon;</td>
+    </table><p>
+        <B>Description:</B>
+    <table border=1 cellspacing="4" cellpadding="4">
+        <p>
+            These are instructions for computations with signed integers. The 
+            instructions record exceptions like overflow or division by zero in special
+            register rA and, if enabled, cause a TRIP.
+        <p>
+        <tr><td>ADD:</td> <td>The sum $Y +$Z or $Y +Z is placed into register X using signed, two's complement arithmetic. An integer
+                overflow exception occurs if the sum is &ge; 2<sup>63</sup> or &lt; -2<sup>63</sup>.  </td>
+        <tr><td>SUB: </td><td> The difference $Y - $Z or $Y - Z is placed into register X using signed, two's complement arithmetic. An
+                integer overflow exception occurs if the difference is &ge; 2<sup>63</sup> or &lt; -2<sup>63</sup></td>
+        <tr><td>MUL:</td><td> The signed product of the number in register Y by either the number in $Z or the unsigned byte Z
+                replaces the contents of register X. An integer overflow exception can occur, as with ADD or SUB, if the result is &ge; 2<sup>63</sup> or &lt; -2<sup>63</sup>. 
+                </br></br>(<b>Consider</b>: Immediate multiplication by powers of 2 can be done more rapidly
+                with the <a href="shift.html">SL</a> instruction)</td>
+        <tr><td>DIV:</td> <td> The signed quotient of the number in $Y divided by either the number in $Z or the unsigned
+                byte Z replaces the contents of $X, and the signed remainder is placed in the special remainder
+                register rR. An integer divide check exception occurs if the divisor is zero; in that case $X is set to zero
+                and rR is set to $Y. An integer overflow exception occurs if the number -2<sup>63</sup>
+                is divided by -1; otherwise
+                integer overflow is impossible. The quotient of y divided by z is defined to be [y/z], and the remainder is
+                defined to be y - [y/z]z (also written y mod z). Thus, the remainder is either zero or has the sign of the
+                divisor. </br></br>(<b>Consider</b>: Dividing by z = 2<sup>t</sup>
+                gives exactly the same quotient as shifting right via the <a href="shift.html">SR</a> command, and
+                exactly the same remainder as anding with z - 1 via the <a href="logic.html">AND</a> command. Division of a positive 63-bit number
+                by a positive constant can be accomplished more quickly by computing the upper half of a suitable unsigned
+                product and shifting it right appropriately.)</td>
+    </table>
 <p>
-<B>Specification:</B>
-<table cellspacing=5 >
-<tr><td>ADD: s($X)</td><td> &larr; s($Y) + s($Z)</td></tr>
-<tr><td>SUB: s($X)</td><td> &larr; s($Y) - s($Z)</td></tr>
-<tr><td>MUL: s($X)</td><td> &larr; s($Y) * s($Z)</td></tr>
-<tr><td vlaign="top">DIV:</td><td>
-<table>
-<tr> <td rowspan=2 valign="middle"> s($X)  &larr; 
-     <td rowspan=2 valign="middle"> 
-       <img src="../image/brace.png" alt="{">
-    <td> &lfloor;s($Y) / s($Z)&rfloor; <td> if  $Z &ne; 0 
-<tr><td> 0                             <td> if  $Z = 0 
-</table>
-<p>
-  the integer part of the Quotient and
-<p>
-<table>
-<tr><td rowspan=2 valign="middle"> s(rR)  &larr; 
-    <td rowspan=2 valign="middle"> 
-      <img src="../image/brace.png" alt="{">
-    <td> s($Y) mod s($Z)  <td> if  $Z &ne; 0
-<tr><td> s($Y)            <td> if  $Z = 0  
-</table>
-<p>
- the remainder in special register rR.
-</td></tr></table>
-<p>
-All instructions exist in two variants. The second operand can either be a
-register $Z or an immediate value Z.
-  <p>
-<B>Timing:</B>
-<p>
-<table cellspacing=5 >
-  <tr><td>ADD: <td> 1&upsilon;
-  <tr><td>SUB: <td> 1&upsilon;
-  <tr><td>MUL: <td> 10&upsilon;
-  <tr><td>DIV: <td> 60&upsilon;
-</table><p>
-<B>Description:</B>
-<p>
-These are instructions for computations with signed integers. The 
-instructions record exceptions like overflow or division by zero in special
-register rA and, if enabled, cause a TRIP.
-  <p>
-<B>See also:</B>
-<p>
-<a href="unsigned.html">Unsigned Arithmetic</a>.
+    <B>See also:</B>
+    <p>
+        <a href="unsigned.html">Unsigned Arithmetic</a>.
 </body>
