--- a/src/mmixide/help/instructions/special.html
+++ b/src/mmixide/help/instructions/special.html
@@ -11,6 +11,7 @@
 
 <ul>
 <li><a href="put.html">PUT and GET</a></li>
+<li><a href="gitraptrip.html">General Information(TRIP and TRAP)</a></li>
 <li><a href="trip.html">TRIP</a></li>
 <li><a href="trap.html">TRAP</a></li>
 <li><a href="resume.html">RESUME</a></li>
@@ -19,7 +20,8 @@
 <li><a href="sync.html">Synchronize Processes</a></li>
 <li><a href="syncid.html">Synchronize Data and Instruction Cache</a></li>
 <li><a href="syncd.html">Sychronize Data Cache and Main Memmory</a></li>
+<li><a href="specialregister.html">List of Special Registers</a></li>
 <li><a href="ldvts.html">Manage Virtual Memory</a></li>
-<li><a href="swym.html">Symathise With Your Machinery</a></li>
+<li><a href="swym.html">Sympathize With Your Machinery</a></li>
 </ul>
 </body>
