--- a/src/mmixide/help/instructions/stb.html
+++ b/src/mmixide/help/instructions/stb.html
@@ -1,52 +1,67 @@
 <head>
-<link rel="stylesheet" type="text/css" href="../mmixide.css">
+    <link rel="stylesheet" type="text/css" href="../mmixide.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
-<h4><a name="Signed_Store" id="Signed_Store">Storing Signed Integers</a></h4>
-<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="Storing">
-	<param name="Keyword" value="STB">
-	<param name="Keyword" value="STW">
-	<param name="Keyword" value="STT">
-	<param name="Keyword" value="STO">
-</OBJECT>
+    <h4><a name="Signed_Store" id="Signed_Store">Storing Signed Integers</a></h4>
+    <Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
+        <param name="Keyword" value="Storing">
+        <param name="Keyword" value="STB">
+        <param name="Keyword" value="STW">
+        <param name="Keyword" value="STT">
+        <param name="Keyword" value="STO">
+    </OBJECT>
 
 
 
-  <B>Name:</B>
-<table cellspacing=5 
-><tr><td><a name="STB" id="STB">STB</a> $X,$Y,$Z</td><td>STB $X,$Y,Z</td><td>Store Byte/Store Byte Immediate   </td></tr>
-<tr><td><a name="STW" id="STW">STW</a> $X,$Y,$Z</td><td>STW $X,$Y,Z</td><td>Store Wyde/Store Wyde Immediate</td></tr>
-<tr><td><a name="STT" id="STT">STT</a> $X,$Y,$Z</td><td>STT $X,$Y,Z</td><td>Store Tetra/Store Tetra Immediate </td></tr>
-<tr><td><a name="STO" id="STO">STO</a> $X,$Y,$Z</td><td>STO $X,$Y,Z</td><td>Store Octa/Store Octa Immediate   </td></tr>
-<tr><td>            </td></tr>
-</table> 
- <p>
-<B>Specification:</B>
-<p>
-With A &larr; $Y+$Z respectively A &larr; $Y+Z we have:
-<table cellspacing=5>
-  <tr><td>STB: s(M<sub>1</sub>[A])  </td><td> &larr; s($X)
-  <tr><td>STW: s(M<sub>2</sub>[A])  </td><td> &larr; s($X)
-  <tr><td>STT: s(M<sub>4</sub>[A])  </td><td> &larr; s($X)
-  <tr><td>STO: s(M<sub>8</sub>[A])  </td><td> &larr; s($X)
-</table>
-  <p>
-<B>Timing:</B>
-<p>
-&mu; + &upsilon;
-  <p>
-<B>Description:</B>
-<p>
-Writes one byte, wyde, tetrabyte, or octabyte to memory. Overflow may occur.
-<p>
-The address A is rounded down, if necessary, according to the alignment requirements.
-Addresses for octabytes must be a multiple of 8, for tetrabytes a multiple of 4,
-and for wydes a multiple of 2.
-  <p>
-<B>See also:</B>
-<p>
-<a href="stbu.html">Storing Unsigned Data</a>.
+    <B>Name:</B>
+    <table cellspacing=5 
+           ><tr><td><a name="STB" id="STB">STB</a> $X,$Y,$Z</td><td>STB $X,$Y,Z</td><td>Store Byte/Store Byte Immediate   </td></tr>
+        <tr><td><a name="STW" id="STW">STW</a> $X,$Y,$Z</td><td>STW $X,$Y,Z</td><td>Store Wyde/Store Wyde Immediate</td></tr>
+        <tr><td><a name="STT" id="STT">STT</a> $X,$Y,$Z</td><td>STT $X,$Y,Z</td><td>Store Tetra/Store Tetra Immediate </td></tr>
+        <tr><td><a name="STO" id="STO">STO</a> $X,$Y,$Z</td><td>STO $X,$Y,Z</td><td>Store Octa/Store Octa Immediate   </td></tr>
+        <tr><td>            </td></tr>
+    </table> 
+    <p>
+        <B>Specification:</B>
+    <p>
+        With A &larr; $Y+$Z respectively A &larr; $Y+Z we have:
+    <table cellspacing=5>
+        <tr><td>STB: s(M<sub>1</sub>[A])  </td><td> &larr; s($X)
+        <tr><td>STW: s(M<sub>2</sub>[A])  </td><td> &larr; s($X)
+        <tr><td>STT: s(M<sub>4</sub>[A])  </td><td> &larr; s($X)
+        <tr><td>STO: s(M<sub>8</sub>[A])  </td><td> &larr; s($X)
+    </table>
+    <p>
+        <B>Timing:</B>
+    <p>
+        &mu; + &upsilon;
+    <p>
+        <B>Description:</B>
+    <p>
+        Writes one byte, wyde, tetrabyte, or octabyte to memory. Overflow may occur.
+    <p>
+        The address A is rounded down, if necessary, according to the alignment requirements.
+        Addresses for octabytes must be a multiple of 8, for tetrabytes a multiple of 4,
+        and for wydes a multiple of 2.
+    <p>
+    <table border=1 cellspacing="4" cellpadding="4">
+
+        <tr><td>STB:</td> <td>The least significant byte of register $X is stored into byte M[$Y + $Z] or M[$Y + Z]. An integer overflow
+                exception occurs if $X is not between -128 and +127.</td>
+        <tr><td>STW: </td><td> The two least significant bytes of register X are stored into bytes M<sub>2</sub>[$Y + $Z] or M<sub>2</sub>[$Y + Z]. An integer
+                overflow exception occurs if $X is not between -32768 and +32767.
+            </td>
+        <tr><td>STT:</td><td> The four least significant bytes of register $X are stored into bytes M<sub>4</sub>[$Y + $Z] or M<sub>4</sub>[$Y + Z]. An integer
+                overflow exception occurs if $X is not between -2,147,483,648 and +2,147,483,647.
+            </td>
+        <tr><td>STO:</td> <td>Register $X is stored into bytes M<sub>8</sub>
+                [$Y + $Z] or M<sub>8</sub>[$Y + Z].
+            </td>
+    </table><p>
+        <B>See also:</B>
+    <p>
+        <a href="stbu.html">Storing Unsigned Data</a>.
 
 </body>
