--- a/src/mmixide/help/options/editor.html
+++ b/src/mmixide/help/options/editor.html
@@ -1,25 +1,19 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
-<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="Editor Options">
-	<param name="Keyword" value="Allways save changed files">
-	<param name="Keyword" value="Line numbers">
-	<param name="Keyword" value="Profile">
-	<param name="Keyword" value="Tabulator size">
-</OBJECT>
+
 <body>
 	<h3>The MMIX Editor Options</h3>
 	<p><img src="editor.png" alt="" border="0"></p>
 	<p></p>
 	<p>You reach the MMIX editor options through the Options menu.</p>
-	<h4>Allways save changed files</h4>
-	If this box is checked, changed files will be saved before starting the assembler or running the program automatically without asking. This can be convenient but can also be dangerous becouse it will overwrite files without asking.
-	<h4>Show line numbers<font color="gray"><img src="profile.png" alt="" height="235" width="440" align="right" border="2"></font></h4>
+	<h4><a id="alsave">Always save changed files</a></h4>
+	If this box is checked, changed files will be saved before starting the assembler or running the program automatically without asking. This can be convenient but can also be dangerous because it will overwrite files without asking.
+	<h4><a id="linenumber">Show line numbers</a><font color="gray"><img src="profile.png" alt="" height="235" width="440" align="right" border="2"></font></h4>
 	<p>If this box is checked, the edit window will display line numbers  (in black) in the left margin.</p>
-	<h4>Show profile</h4>
+	<h4><a id="profile">Show profile</a></h4>
 	<p>If this box is checked, the edit window will display a Profile in the left margin. The profile shows (in blue) for each line how often it was executed .</p>
-	<h4>Layout and Pretty Printing</h4>
+	<h4><a id="lapp">Layout and Pretty Printing</a></h4>
 	<h5>Tabulator width</h5>
 	<p>With this control you can set size of the tabulator. For example, setting it to eight means that one tabulator takes up the same space as eight ordinary characters.</p>
 	<h5>Use tabulators for indentation</h5>
