--- a/src/mmixide/help/options/run.html
+++ b/src/mmixide/help/options/run.html
@@ -1,27 +1,13 @@
 <head>
 <link rel="stylesheet" type="text/css" href="../mmixide.css">
 </head>
-<Object type="application/x-oleobject" classid="clsid:1e2a7bd0-dab9-11d0-b93a-00c04fc99f9e">
-	<param name="Keyword" value="Run Options">
-	<param name="Keyword" value="Main">
-	<param name="Keyword" value="Argument count">
-	<param name="Keyword" value="argc">
-	<param name="Keyword" value="Pool segment">
-	<param name="Keyword" value="Argument vector">
-	<param name="Keyword" value="argv">
-	<param name="Keyword" value="Register $0">
-	<param name="Keyword" value="Register $1">
-	<param name="Keyword" value="Standard Input">
-	<param name="Keyword" value="StdIn">
-	<param name="Keyword" value="Fake StdIn">
-	<param name="Keyword" value="Command line">
-</OBJECT>
+
 <body>
 	<h3>The MMIX Run Options</h3>
 	<p><img src="run.png" alt="" border="0"></p>
 	<p></p>
 	<p>You reach the MMIX run options through the Options menu.</p>
-	<h4>Command line</h4>
+	<h4><a id="cmd">Command line</a></h4>
 	<p>When an MMIX program enters the `<tt>Main</tt>´ routine, the resisters $0 and $1 will contain the argument count and the location of the argument vector, respectively.</p>
 	<p>The argument count is the number of arguments given on the command line. The argument vector is an array of octabytes located at the beginning of the pool segment; these octabytes contain the addresses of the arguments. The arguments are stored as zero terminated ASCII strings in the pool segment as well. Note that the first octabyte in the pool segment contains the address of the first free octabyte in the pool segement.</p>
 	<p>As an example, if the program starts with the above command line ``hello world´´, you can see in the local register window:</p>
@@ -31,6 +17,6 @@
 	<p> <font color="gray"><img src="argv.png" alt="" height="62" width="295" border="2"></font></p>
 	<p>The first octabyte give the address of the free space in the pool segment. The argument vector starts with the second octabyte. The value #4000 0000 0000 0020 is the address of the first argument string; the value of the next octabyte #4000 0000 0000 0028 is the address of the second argument string; and the argument vector is terminated by a zero octabyte. The argument strings are best seen in ASCII format:</p>
 	<p><font color="gray"><img src="args.png" alt="" height="31" width="231" border="2"></font></p>
-	<h4>Fake StdIn</h4>
+	<h4><a id="fake">Fake StdIn</a></h4>
 	<p>When an MMIX program reads from Standard Input (handle 0), it usualy reads input characters interactively from the trace window. It is, however, sometimes convenient to use a file to simulate standard input. If a filename is given in this edit box, the data from this file will be used instead of interactive input. It is equivalent to the -f option of the command line MMIX simulator).</p>
 </body>
